--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "e2e": "ng e2e",
     "postinstall": "ng build — aot — prod"
   },
-  "engines": { 
-    "node": "10.16.3", 
-    "npm": "6.9.0" 
+  "engines": {
+    "node": "10.16.3",
+    "npm": "6.9.0"
   },
   "private": true,
   "dependencies": {
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
     "bootstrap": "^4.3.1",
+    "caniuse-lite": "^1.0.30001021",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
