--- a/package.json
+++ b/package.json
@@ -10,10 +10,6 @@
     "e2e": "ng e2e",
     "postinstall": "ng build --aot --prod"
   },
-  "engines": {
-    "node": "10.16.3",
-    "npm": "6.9.0"
-  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.9",
@@ -33,13 +29,13 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.7",
+    "@angular-devkit/build-angular": "^0.803.23",
     "@angular/cli": "~8.3.7",
     "@angular/compiler-cli": "~8.2.9",
     "@angular/language-service": "~8.2.9",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -52,5 +48,9 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
+  },
+  "engines": {
+    "node": "10.16.3",
+    "npm": "6.9.0"
   }
 }
